[tool.poetry]
name = "Python-C-Benchmarks"
version = "1.0.0"
description = ""
authors = ["Peter Hodge <peterhodge@microsoft.com>"]
license = "MIT"
packages = [
	{include = "python_c_bench"},
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
