[tool.poetry]
name = "Python-C-Benchmarks"
version = "1.0.0"
description = ""
authors = ["Peter Hodge <peterhodge@microsoft.com>"]
license = "MIT"
packages = [
	{include = "python_c_bench"},
]

[tool.poetry.dependencies]
python = "^3.9"
Nuitka = "^1.0.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
mypy = "^0.971"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
